# backend/app/api/v1/meta.py
@@ -19,5 +19,6 @@ async def meta() -> MetaResponse:
         name="myle-vl2",
         api_version=1,
         environment=settings.app_environment,
+        auth_dev_login_enabled=settings.auth_dev_login_enabled,
         features=ClientFeatures(intelligence=settings.feature_intelligence),
     )
